--- a/InventarioWebUtp/pom.xml
+++ b/InventarioWebUtp/pom.xml
@@ -12,12 +12,12 @@
 	<groupId>pe.com.inventario.web</groupId>
 	<artifactId>InventarioWebUtp</artifactId>
 	<version>1.0</version>
-	<packaging>war</packaging>
 	<name>InventarioWebUtp</name>
 	<description>Inventario para la UTP</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 
 	<dependencies>
